<resources>
    <string name="app_name">AAViagens</string>
    <string name="button_run">Pesquisar</string>
    <string name="button_registo">Registar</string>
    <string name="button_voo">Voos</string>
    <string name="button_guardadas">Pesquisas guardadas</string>
    <string name="button_hotel">Hotéis</string>
    <string name="action_settings">Settings</string>
    <string name="originLabel">Origem</string>
    <string name="destinationLabel">Destino</string>
    <string name="quartosLabel">Quartos</string>
    <string name="departureDateLabel">Data de partida</string>
    <string name="setDateButtonLabel">Set Date</string>
    <string name="data_de_partida">Data de partida</string>
    <string name="data_de_regresso">Data de regresso</string>
    <string name="passageiros">Passageiros</string>
    <string name="quartos_hosp_des">Quartos/Hospédes</string>
</resources>