<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <AutoCompleteTextView
        android:hint="@string/originLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAirportsOrigin1"
        android:completionThreshold="1"
        />





    <AutoCompleteTextView
    android:hint="@string/destinationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextViewAirportsDestination1"
        android:completionThreshold="1"
        android:layout_below="@+id/autoCompleteTextViewAirportsOrigin1"/>





    <EditText
        android:hint="@string/data_de_partida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDepartureDate"
        android:layout_below="@+id/autoCompleteTextViewAirportsDestination1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toStartOf="@+id/buttonDateDialogDeparture"
        android:layout_toLeftOf="@+id/buttonDateDialogDeparture" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDateButtonLabel"
        android:id="@+id/buttonDateDialogDeparture"
        android:layout_alignBottom="@+id/editTextDepartureDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <EditText
        android:hint="@string/data_de_regresso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextArriveDate"
        android:layout_below="@+id/editTextDepartureDate"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_toStartOf="@+id/buttonDateDialogArrive"
        android:layout_toLeftOf="@+id/buttonDateDialogArrive"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDateButtonLabel"
        android:id="@+id/buttonDateDialogArrive"
        android:layout_alignBottom="@+id/editTextArriveDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/buttonDateDialogDeparture"/>


    <EditText
        android:id="@+id/passageiros1"
        android:hint="@string/passageiros"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextArriveDate"/>

    <EditText
        android:id="@+id/quartos"
        android:hint="@string/quartos_hosp_des"
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passageiros1"/>

    <Button
        android:id="@+id/buttonExecute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quartos"
        android:layout_centerHorizontal="true"
        android:text="@string/button_run"
        />


</RelativeLayout>